[project]
name = "fhirmodels"
version = "0.1.0"
description = "Python classes for FHIR resources"
authors = [{ name = "Till Rostalski", email = "tillrostalski@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/trostalski/fhirmodels"
Issues = "https://github.com/trostalski/fhirmodels/issues"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
fm = "fhirmodels.cli:main"
