[project]
name = "fhirmodels"
version = "0.1.3"
description = "Python classes for FHIR resources"
authors = [{ name = "Till Rostalski", email = "tillrostalski@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
rye = { dev-dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "black>=24.4.2",
] }

[project.urls]
Homepage = "https://github.com/trostalski/fhirmodels"
Issues = "https://github.com/trostalski/fhirmodels/issues"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
fm = "fhirmodels.cli:main"
